--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-!DOCTYPE html
-html lang=fr
-head
-  meta charset=UTF-8 
-  meta http-equiv=refresh content=0; url=pacman-backend.html 
-  titleRedirection...title
-head
-body
-body
-html
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="0; url=pacman-backend.html" />
+  <title>Redirection...</title>
+</head>
+<body>
+</body>
+</html>
