Correction fautes d'orthographes.

--- a/pacman-backend.html
+++ b/pacman-backend.html
@@ -108,8 +108,8 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 <hr/>
 <h2 id="introduction">🚀 Introduction</h2>
 <hr/>
-<p>Cette documentation décrit le fonctionnement du plugin Eclipse <strong>Pacman</strong>, nouvelle version <strong>5</strong>, dont l'objectif est de générer automatiquement du code Java à partir de différentes modélisations graphiques sous ISD (Information System Designer). </p>
-<p>Elle apporte l'ensemble des informations nécessaires sur la modélisation et la généreration d'une application de type <strong>backend</strong> afin de mettre à disposition un ou plusieurs services REST pour une application de type <strong>Frontend</strong>. </p>
+<p>Cette documentation décrit le fonctionnement du plugin Eclipse <strong>Pacman</strong>, nouvelle version <strong>V5</strong>, dont l'objectif est de générer automatiquement du code Java à partir de différentes modélisations graphiques sous ISD (Information System Designer). </p>
+<p>Elle apporte l'ensemble des informations nécessaires sur la modélisation et la génération d'une application de type <strong>backend</strong> afin de mettre à disposition un ou plusieurs services REST pour une application de type <strong>frontend</strong>. </p>
 <p>Elle est destinée aux développeurs souhaitant comprendre et utiliser l'ensemble des générateurs. </p>
 <p>Il est à noter que cette documentation ne rentre pas dans les détails de la modélisation de l'application, aspect dont les bases sont censées être déjà connues et maîtrisées par les developpeurs qui vont utiliser cette version du plugin  <strong>pacman</strong>. Se reporter aux différents documents ad hoc pour plus d'informations sur ce sujet.</p>
 <p>❗ Les nommages des différentes classes est ici donné avec la configuration par défaut du fichier de nommage qui est généré avec un nouveau projet. Il sont donc susceptibles d'évoluer en fonction des règles précisées par les développeurs de l'application cible.</p>
