--- a/fr.pacman.doc/isd/index.html
+++ b/fr.pacman.doc/isd/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html>
-<head><meta charset="utf-8"><title>Markdown Viewer</title></head>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="0; url=isd-pacman.html" />
+  <title>Redirection...</title>
+</head>
 <body>
-<div id="content"></div>
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-<script>
-  fetch('isd-pacman.md')
-    .then(res => res.text())
-    .then(md => document.getElementById('content').innerHTML = marked.parse(md));
-</script>
 </body>
 </html>
